language/move-lang/tests/move_check/translated_ir_tests/move/commands/continue_outside_loop.exp
error[E04014]: invalid loop control
  ┌─ tests/move_check/translated_ir_tests/move/commands/continue_outside_loop.move:3:5
  │
3 │     continue
  │     ^^^^^^^^ Invalid usage of 'continue'. 'continue' can only be used inside a loop body

